⭐️をつけた。一覧の時の住所を日本語にした。navbarをfixedにした

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -11,3 +11,7 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.contentWrapper {
+  padding-top: 40px; /* 例: Navbarの高さが60pxの場合 */
+}
