--- a/frontend/src/components/Navbar/Navbar.css
+++ b/frontend/src/components/Navbar/Navbar.css
@@ -7,6 +7,9 @@
   justify-content: space-between;
   align-items: center;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  position: fixed;
+  width: 100%;
+  z-index: 999;
 }
 
 .navbar-brand a {
@@ -25,6 +28,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-around;
+  margin-right: 35px;
   width: 2rem;
   height: 2rem;
   z-index: 999; /* ハンバーガーボタンが常に最前面に来るように */
