--- a/frontend/src/components/Navbar/Navbar.css
+++ b/frontend/src/components/Navbar/Navbar.css
@@ -16,9 +16,15 @@
   color: inherit;
   text-decoration: none;
   font-size: 1.5rem;
-  font-weight: bold;
+  font-weight: 900;
+  /* text-shadow: #333 2px 2px 4px; */
+  font-family: "Rampart One", sans-serif;
   /* モバイル版のブランドを左端に寄せる */
   margin-right: auto; /* 他の要素との間に自動マージン */
+}
+
+span{
+  font-size: 28px;
 }
 
 .navbar-toggler {
@@ -136,3 +142,4 @@
     padding: 0; /* パディングをリセット */
   }
 }
+
